# loom-cv

./: .gitignore  README.md
engine/: CMakeLists.txt  vcpkg.json
engine/include/: edge_detection.hpp  pose_estimator.hpp  vanishing_point.hpp
engine/src/: edge_detection.cpp  main.cpp  pose_estimator.cpp  vanishing_point.cpp
web/src/types/: analysis.ts
